[package]
name = "system"
version = "0.1.0"
authors = ["Byron Houwens <zhion360@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "The NAOM (Notarised Append Only Memory) crate contains all the code necessary to set up an instance of the Zenotta blockchain."

[dependencies]
async-std = "1.7.0"
async-stream = "0.3.2"
bincode = "1.2.1"
bytes = { version = "1.0.1", features = ["serde"] }
chrono = "0.4.10"
clap = "2.33.0"
config = { version = "0.10.1", features = ["toml"] }
futures = "0.3"
futures-util = "0.3.15"
hex = "0.4.2"
merkletree = "0.21.0"
merkle-log = "0.0.3"
moka = { version = "0.8.1", features = ["future"] }
naom = { path = "../naom" }
keccak_prime = { path = "../keccak-prime" }
protobuf = "~2.0"
raft = "0.5.0"
rand = "0.7.3"
ring = "0.16.20"
rocksdb = "0.15.0"
rug = "1.7.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.104", features = ["derive"] }
sha3 = "0.9.1"
serde_json = "1.0.61"
tokio = { version = "1.7.1", features = ["full"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = "0.1.6"
tracing = "0.1.13"
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"
warp = { version = "0.3.1", features = ["tls"] }

[features]
mock = []

[patch.crates-io]
raft = {git =  "https://github.com/jeanphilippeD/raft-rs", branch = "0.5.1"}
