[package]
name = "aiblock_network"
version = "1.1.2"
authors = ["Byron Houwens <byron.houwens@a-block.net>"]
edition = "2018"
readme = "README.md"
description = "The AIBlock Network"

[dependencies]
async-std = "1.7.0"
async-trait = "0.1.58"
async-stream = "0.3.2"
bincode = "1.2.1"
bytes = { version = "1.0.1", features = ["serde"] }
chrono = "0.4.10"
clap = "2.33.0"
config = { version = "0.10.1", features = ["toml"] }
futures = "0.3"
futures-util = "0.3.15"
hex = "0.4.2"
merkletree = "0.23.0"
merkle-log = "0.0.3"
moka = { version = "0.8.1", features = ["future"] }
tw_chain = "1.1.3"
keccak_prime = "0.1.0"
protobuf = "2.6.0"
raft = { git = "https://github.com/ABlockOfficial/raft-rs", branch = "0.5.1" }
rand = "0.7.3"
ring = "0.16.20"
rocksdb = "0.21.0"
rug = "1.7.0"
serde = { version = "1.0.104", features = ["derive"] }
sha3 = "0.9.1"
serde_json = "1.0.61"
tokio = { version = "1.7.1", features = ["full"] }
tokio-rustls = "0.23.0"
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = "0.1.6"
tracing = "0.1.40"
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"
warp = { version = "0.3.1", features = ["tls"] }
url = "2.4.1"
trust-dns-resolver = "0.23.2"
rustls-pemfile = "2.0.0"

[features]
mock = []
config_override = []
