[package]
name = "miner_node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A miner node for blockchain network"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
